- Issue #9
Updated styles in styles.css to enhance layout and visual appeal. Adjusted padding, added max-width and max-height to the #results section, and included justify-content for better alignment.

The #results section now expands down to the bottom of the current window size (20px above it to matching padding), and overflows into a scrollable field.

--- a/static/styles.css
+++ b/static/styles.css
@@ -13,8 +13,8 @@ body {
     background-color: rgb(255, 255, 255);
     border-radius: 8px; /* rounds the corner */
     padding-top: 20px;
-    padding-bottom: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* adds a shadow effect */
+    justify-content: center;
 }
 
 .header-container {
@@ -101,7 +101,12 @@ h2 {
 
 #results {
     margin-top: 30px;
-    padding: 0 30px; /* horizontal padding to fit in the white container */
+    padding: 0px 30px; /* horizontal padding to fit in the white container */
+    justify-content: center;
+    max-width: 800px;
+    max-height: calc(100vh - 20px - 240px);
+    /* 100% of the window height, -20px for padding to match the top, -240px to account for other element sizes */
+    overflow: auto;
 }
 
 .patent-item {
